[package]
name = "glomers"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }
anyhow = { version = "1.0" }
rusty_ulid = { version = "2" }
rand = { version = "0.8" }
